[1.0.6]

 * FEATURE: Available in maven central repositories.

[1.0.7]

 * FEATURE: Added support for Yammer and Evernote ( thanks oparrsih )
 * FIX: Fixed bug that preventing setting the scope param on Google Api  

[1.0.8]

 * FEATURE: Added setConnectTimeout and setReadTimeout for the Request Object
 * FIX: Fixed Evernote Api (uses GET for request and access tokens)
 * REFACTOR: URLEncoding stuff. LinkedIn specific decoder is no longer needed
 * FEATURE: Added Google example

[1.0.9]

 * FEATURE: Token made Serializable
 * FIX: Google Api encoding issues (thanks @roger and @klakegg)

[1.1.0]

  * FEATURE: OAuth 2.0 Support and Facebook support out of the box (thanks Diego Silveira)
  * REFACTOR: Api creation and OAuthService refactors
  * REFACTOR: Connections are created lazily (just before sending the request)

[1.1.1]

  * FIX: Removed isEmpty() from OAuth2.0 code in order to support older JVMs
  * FEATURE: Overloaded provider() method to support instances as well as classes (thanks dustismo)
  * FIX: White-space parameter bug (thanks Krogoth)
  * FEATURE: OAuth 2.0 now implements server-flow (thanks Diego Silveira)

[1.1.2]

  * FIX: Fixed ugly bug that made 1.1.1 practically unusable (thanks Stubbs)

[1.1.3]

  * FEATURE: Added rawResponse to Token, for extracting additional parameters (thanks Dirk McCormick)
  * FEATURE: Added Dropbox Api
  * FIX: Token responses now work despite of the token/secret order
  * FEATURE: Added Foursquare OAuth 2.0 Api (thanks Tom Tasche)
  * FEATURE: Added support for OAuth1.0a signatures via querystring parameters
  * FEATURE: Added ConstantContact Api (thanks Matthew Laudato)

[1.2]
  * REFACTOR: Moved scope inside OAuthConfig (breaks backwards compatibility)
  * FEATURE: Added scopes to Facebook 2.0 Api
  * FEATURE: Added Plaintext signature for Yammer
  * FEATURE: Added Twitter SSL endpoints (use TwitterApi.SSL.class)

[1.2.1]
  * FEATURE: Added custom charset support to Request (thanks Eric Genet)